<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/selamat_datang"
        app:layout_constraintBottom_toTopOf="@+id/tipe_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipe_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:text="@string/tipe_pelanggan"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/Hello"
        app:layout_constraintTop_toBottomOf="@+id/Hello" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="395dp"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/transaksi_hariini"
        app:layout_constraintBottom_toTopOf="@+id/kode_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipe_member" />

    <TextView
        android:id="@+id/kode_bar"
        android:layout_width="395dp"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/kode_barang"
        app:layout_constraintBottom_toTopOf="@+id/nama_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/nama_bar"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/nama_barang"
        app:layout_constraintBottom_toTopOf="@+id/harga"
        app:layout_constraintEnd_toEndOf="@+id/harga"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/harga"
        app:layout_constraintTop_toBottomOf="@+id/kode_bar" />

    <TextView
        android:id="@+id/harga"
        android:layout_width="395dp"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/harga"
        app:layout_constraintBottom_toTopOf="@+id/total_harga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama_bar" />

    <TextView
        android:id="@+id/total_harga"
        android:layout_width="395dp"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/total_harga"
        app:layout_constraintBottom_toTopOf="@+id/discount_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/harga" />

    <TextView
        android:id="@+id/discount_bar"
        android:layout_width="395dp"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/diskon_harga"
        app:layout_constraintBottom_toTopOf="@+id/discount_mem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_harga" />

    <TextView
        android:id="@+id/discount_mem"
        android:layout_width="395dp"
        android:layout_height="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/diskon_member"
        app:layout_constraintBottom_toTopOf="@+id/jumlah_harga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discount_bar" />

    <TextView
        android:id="@+id/jumlah_harga"
        android:layout_width="395dp"
        android:layout_height="20dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/jumlah_bayar"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discount_mem" />

    <TextView

        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="9dp"
        android:textStyle="bold"
        android:text="@string/terima_kasih_telah_berbelanja"
        app:layout_constraintBottom_toTopOf="@+id/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jumlah_harga" />

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:layout_marginBottom="211dp"
        android:onClick="share1"
        android:text="@string/bagikan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
</androidx.constraintlayout.widget.ConstraintLayout>